--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "node scripts/migrate-if-ready.mjs && next build",
     "start": "next start",
-  "lint": "next lint",
-  "seed": "tsx prisma/seed.ts",
-  "postinstall": "prisma generate"
+    "lint": "next lint",
+    "format": "prettier --cache --write .",
+    "format:check": "prettier --check .",
+    "typecheck": "tsc --noEmit",
+    "seed": "tsx prisma/seed.ts",
+    "postinstall": "prisma generate",
+    "prepare": "husky"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -53,11 +57,18 @@
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "eslint-config-prettier": "^10.1.8",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.2",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx,css,md,json,mdx}": [
+      "prettier --cache --write"
+    ]
   }
 }
