--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tuushin-crm",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@9.12.3",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "node scripts/migrate-if-ready.mjs && next build",
