--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -10,11 +10,11 @@ services:
       POSTGRES_DB: ${POSTGRES_DB:-tuushin_crm}
     # Expose DB on host port 5436 -> container 5432
     ports:
-      - "5436:5432"
+      - '5436:5432'
     volumes:
       - db_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres}"]
+      test: ['CMD-SHELL', 'pg_isready -U ${POSTGRES_USER:-postgres}']
       interval: 5s
       timeout: 5s
       retries: 10
