feat: report and kpi and external service sync improve

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ TUUSHIN_EXTERNAL_CRM_BASE_URL=
 TUUSHIN_EXTERNAL_CRM_USERNAME=
 TUUSHIN_EXTERNAL_CRM_PASSWORD=
 MASTER_SYNC_SOURCE=
+EXTERNAL_SHIPMENT_CRON_SECRET=
+EXTERNAL_SHIPMENT_CRON_WINDOW_DAYS=7
+EXTERNAL_SHIPMENT_CRON_FILTER_TYPES=1,2
+EXTERNAL_SHIPMENT_CRON_CATEGORIES=IMPORT,TRANSIT,EXPORT
 
 # Database connection settings for Tuushin CRM
 DATABASE_URL=
