--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "typecheck": "tsc --noEmit",
     "seed": "tsx prisma/seed.ts",
     "postinstall": "prisma generate",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.10.0",
@@ -55,6 +58,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitest/ui": "^4.0.12",
     "eslint": "^9",
     "eslint-config-next": "15.4.2",
     "eslint-config-prettier": "^10.1.8",
@@ -65,7 +69,8 @@
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.5",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.12"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,css,md,json,mdx}": [
